# game-o

./: .gitignore  README.md  pyproject.toml
sandbox/platformer/: 02_draw_sprites.py  05_add_gravity.py  06_camera.py  07_add_coins_and_sound.py  08_display_score.py
src/assets/map/: map.json
src/platformer/: 02_open_window.py  03_scene_object.py  04_user_control.py  06_camera.py  08_display_score.py
src/platformer/keyboard/: keyboard.py
