[project]
name = "game-o"
authors = [
    {name = "Rich Saupe", email = "sabadam32@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
version = "0.1.0"
requires-python = ">=3.11.8"
dependencies = [
    "arcade~=2.6.17",
    "cookiecutter~=2.6.0"
]

[project.optional-dependencies]
dev = [
    "hatch~=1.9.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]